tests/rosetta/out/Rust/chernicks-carmichael-numbers.error
rustc: exit status 1
warning: denote infinite loops with `loop { ... }`
   --> /tmp/chernicks-carmichael-numbers.rs:112:13
    |
112 |             while true {
    |             ^^^^^^^^^^ help: use `loop`
    |
    = note: `#[warn(while_true)]` on by default

error[E0308]: mismatched types
  --> /tmp/chernicks-carmichael-numbers.rs:28:30
   |
28 |         while n > 1 && a[n - 1 as usize] == 0 {
   |                              ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/chernicks-carmichael-numbers.rs:28:28
   |
28 |         while n > 1 && a[n - 1 as usize] == 0 {
   |                            ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0277]: the type `[i32]` cannot be indexed by `i32`
  --> /tmp/chernicks-carmichael-numbers.rs:28:26
   |
28 |         while n > 1 && a[n - 1 as usize] == 0 {
   |                          ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<i32>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/chernicks-carmichael-numbers.rs:29:35
   |
29 |             a = a[0 as usize..n - 1 as usize].to_vec();
   |                                   ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/chernicks-carmichael-numbers.rs:29:31
   |
29 |             a = a[0 as usize..n - 1 as usize].to_vec();
   |                               ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/chernicks-carmichael-numbers.rs:29:33
   |
29 |             a = a[0 as usize..n - 1 as usize].to_vec();
   |                                 ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0308]: mismatched types
  --> /tmp/chernicks-carmichael-numbers.rs:29:17
   |
26 |     fn bigTrim(a: &mut Vec<i32>) -> Vec<i32> {
   |                   ------------- expected due to this parameter type
...
29 |             a = a[0 as usize..n - 1 as usize].to_vec();
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&mut Vec<i32>`, found `Vec<i32>`
   |
   = note: expected mutable reference `&mut Vec<_>`
                         found struct `Vec<_>`
help: consider dereferencing here to assign to the mutably borrowed value
   |
29 |             *a = a[0 as usize..n - 1 as usize].to_vec();
   |             +

error[E0308]: mismatched types
  --> /tmp/chernicks-carmichael-numbers.rs:32:16
   |
26 |     fn bigTrim(a: &mut Vec<i32>) -> Vec<i32> {
   |                                     -------- expected `Vec<i32>` because of return type
...
32 |         return a;
   |                ^- help: try using a conversion method: `.to_vec()`
   |                |
   |                expected `Vec<i32>`, found `&mut Vec<i32>`
   |
   = note:         expected struct `Vec<_>`
           found mutable reference `&mut Vec<_>`

error[E0308]: mismatched types
  --> /tmp/chernicks-carmichael-numbers.rs:56:21
   |
51 |         let mut carry = 0;
   |                         - expected due to this value
...
56 |             carry = (prod as f64) / (10 as f64);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `f64`

error[E0308]: mismatched types
  --> /tmp/chernicks-carmichael-numbers.rs:69:18
   |
69 |             s += a[i as usize].to_string();
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
69 |             s += &a[i as usize].to_string();
   |                  +

error[E0308]: mismatched types
  --> /tmp/chernicks-carmichael-numbers.rs:72:16
   |
65 |     fn bigToString(a: Vec<i32>) -> &'static str {
   |                                    ------------ expected `&'static str` because of return type
...
72 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
72 |         return &s;
   |                +

error: aborting due to 11 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
